<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/mainMonNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name" />

    <Button
        android:id="@+id/mainBtnUniversite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_universite_laval" />

    <Button
        android:id="@+id/mainBtnDepartement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_departement" />

    <Button
        android:id="@+id/mainBtnProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_profil" />
</LinearLayout>